[gd_scene load_steps=3 format=3 uid="uid://ch7yo8kbbm7b4"]

[ext_resource type="Script" path="res://ui/HUD.gd" id="1_nttv3"]
[ext_resource type="FontFile" uid="uid://b8mphklx8mbmr" path="res://font/yoster.ttf" id="2_8lreg"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_nttv3")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 29.5
offset_top = 13.0
offset_right = 158.5
offset_bottom = 81.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_8lreg")
theme_override_font_sizes/font_size = 64
text = "0"
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.5
offset_top = -27.0
offset_right = 226.5
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8lreg")
theme_override_font_sizes/font_size = 50
text = "You're locked in."
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 28.0
offset_right = 67.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8lreg")
theme_override_font_sizes/font_size = 40
text = "Start"

[node name="WeirdButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -448.0
offset_right = 288.0
offset_bottom = -399.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_8lreg")
theme_override_font_sizes/font_size = 23
text = "    Weird physics"
alignment = 0

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="WeirdButton" to="." method="_on_weird_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
